--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -50,13 +50,23 @@ img {
 
       li {
         padding: 1rem 2.5rem;
+        color: $dark-color;
+        cursor: pointer;
+        z-index: 11;
 
-        a {
+        &:hover {
+          border-color: $dark-color;
+        }
+
+        h6 {
           text-decoration: none;
           color: $dark-color;
           border-bottom: 1px transparent solid;
           transition: border-color 0.5s;
           font-size: 1rem;
+          font-weight: 300;
+          cursor: pointer;
+          z-index: 11;
 
           &:hover {
             border-color: $dark-color;
@@ -508,53 +518,6 @@ img {
   }
 }
 
-footer {
-  padding: 2rem 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  background-color: $dark-color;
-  color: $light-color;
-
-  .social {
-    padding-bottom: 2rem;
-    width: 10vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    h6 {
-      text-align: center;
-      padding-bottom: 0.5rem;
-      color: $grey-line;
-    }
-
-    .links {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
-      width: 100%;
-    }
-
-    a {
-      text-decoration: none;
-      color: $light-color;
-      margin: 0 auto;
-    }
-  }
-
-  .copyright {
-    p {
-      color: $grey-line;
-      font-weight: 300;
-      font-size: 0.7rem;
-    }
-  }
-}
-
 #contact {
   min-height: 90vh;
   padding-bottom: 6rem;
@@ -618,6 +581,53 @@ footer {
       .captcha {
         padding-top: 1rem;
       }
+    }
+  }
+}
+
+footer {
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: $dark-color;
+  color: $light-color;
+
+  .social {
+    padding-bottom: 2rem;
+    width: 10vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    h6 {
+      text-align: center;
+      padding-bottom: 0.5rem;
+      color: $grey-line;
+    }
+
+    .links {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      width: 100%;
+    }
+
+    a {
+      text-decoration: none;
+      color: $light-color;
+      margin: 0 auto;
+    }
+  }
+
+  .copyright {
+    p {
+      color: $grey-line;
+      font-weight: 300;
+      font-size: 0.7rem;
     }
   }
 }
