ikos construction website added to projects

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -307,6 +307,56 @@ img {
         }
       }
     }
+
+    .project-ikos {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      border-bottom: 1px solid $grey-line;
+
+      .project-ikos-text {
+        width: 60%;
+      }
+      .project-ikos-img {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        width: 40%;
+        filter: grayscale(100%);
+        transition: filter 0.5s ease;
+
+        &:hover {
+          filter: none;
+        }
+        .buttons {
+          width: 80%;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-evenly;
+          padding-bottom: 2rem;
+
+          a {
+            text-decoration: none;
+            border: 0.3pt solid $dark-color;
+            text-transform: uppercase !important;
+            font-size: 0.6rem;
+            letter-spacing: 2px;
+            padding: 0.7rem 1.3rem;
+            transition: all 0.4s ease-in-out;
+
+            &:hover {
+              background: $dark-color;
+              color: $light-color;
+              transition: all 0.4s ease-in-out;
+            }
+          }
+        }
+      }
+    }
     .project-5 {
       display: flex;
       flex-direction: row;
