--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -16,6 +16,7 @@
     .project-2-img,
     .project-3-img,
     .project-4-img,
+    .project-ikos-img,
     .project-5-img,
     .project-6-img,
     .project-7-img {
@@ -76,6 +77,7 @@
       .project-2,
       .project-3,
       .project-4,
+      .project-ikos,
       .project-5,
       .project-6,
       .project-7 {
@@ -85,6 +87,7 @@
         .project-2-text,
         .project-3-text,
         .project-4-text,
+        .project-ikos-text,
         .project-5-text,
         .project-6-text,
         .project-7-text {
@@ -96,6 +99,7 @@
         .project-2-img,
         .project-3-img,
         .project-4-img,
+        .project-ikos-img,
         .project-5-img,
         .project-6-img,
         .project-7-img {
